testsuite/tests/typing-layouts-block-indices/block_indices_disabled.compilers.reference
File "block_indices.ml", line 29, characters 34-45:
29 | let _fail_when_no_extensions () = (.contents)
                                       ^^^^^^^^^^^
Error: This construct requires the stable version of the extension "layouts", which is disabled and cannot be used
